--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^4.9.0",
     "react-scripts": "5.0.1",
     "saas": "^1.0.0",
+    "sass": "^1.63.3",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
